# intents

./: .devcontainer.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  action_responses.txt  devenv.nix  e false  intent_response.txt  intents.yaml  language_scores.json  languages.yaml  linting.txt  mypy.ini  pyproject.toml  query_responses.txt  requirements.txt  requirements_dev.txt  requirements_lint.txt  setup.cfg  testing.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: generic_issue.yaml  sentence_issue.yaml
.github/workflows/: ci.yaml  gh-pages.yml  nightly.yaml  release-drafter.yml
docs/: README.md  slot_combinations.md  templates.md
docs/codespace/: README.md
lists/: brightness.yaml  lights.yaml  media.yaml
package/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
package/home_assistant_intents/: __init__.py  domains.py
package/script/: write_languages.py
parser/: HassILGrammar.g4  Makefile  README.md  mypy.ini  pylintrc  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
responses/: README.md
script/: add_language.py  format  lint  package  setup  test  test_file  write_language_scores.py
scripts/: check.sh  install.sh  test.sh
sentences/: README.md
shared/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_language_intents.py  test_language_sentences.py  test_languages.py  test_slot_combinations.py
website/: .eleventy.js  package-lock.json  package.json
(+5996 files in other folders)
